bk_ida/gccida/g0/get_attr_length_address
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_address/src/insn-attrtab.c:13922:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 13642, "get_attr_length_address"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_address/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_address/src/insn-attrtab.c:13922:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 13642, "get_attr_length_address"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_address/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_address/src/insn-attrtab.c:14175:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !constant_call_address_operand( recog_data_0.operand[1], VOIDmode) ) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_address/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_address/src/obj/insn-attrtab.o] Error 1
